# apertium-svn-2008

./: Apertium_New_Language_Pair_HOWTO.html  Makefile.am  apertium-ca-ro.ca-ro.dix  apertium-ca-ro.ro.dix
apertium-ca-ro/: Makefile.am  apertium-ca-ro.ca-ro.dix  apertium-ca-ro.ca-ro.t1x  apertium-ca-ro.ca.dix  apertium-ca-ro.ro-ca.t1x  apertium-ca-ro.ro.dix  apertium-ca-ro.trules-ca-ro.xml  apertium-ca-ro.trules-ro-ca.xml  configure.ac  modes.xml
apertium-en-ca/: AUTHORS  Makefile.am  README  apertium-en-ca.ca-en.t1x  apertium-en-ca.ca-en.t2x  apertium-en-ca.ca-en.t3x  apertium-en-ca.ca.dix  apertium-en-ca.ca.tsx  apertium-en-ca.en-ca.dix  apertium-en-ca.en-ca.t1x  apertium-en-ca.en-ca.t2x  apertium-en-ca.en-ca.t3x  apertium-en-ca.en.metadix  apertium-en-ca.en.tsx  apertium-en-ca.trules-ca-en.xml  apertium-en-ca.trules-en-ca.xml  buscaPar.xsl  ca-en.prob  configure.ac  en-ca-unsupervised.make  en-ca.prob  modes.xml  principal.xsl
apertium-en-ca/CVS/: Entries  Repository
apertium-en-ca/modes/: ca-en  ca-en-anmor  ca-en-chunker  ca-en-generador  ca-en-interchunk  ca-en-lextor  ca-en-postchunk  ca-en-pretransfer  en-ca  en-ca-anmor  en-ca-chunker  en-ca-generador  en-ca-interchunk  en-ca-lextor  en-ca-postchunk  en-ca-pretransfer  en-ca-tagger  test-ca-en  test-ca-en-anmor  test-ca-en-chunker  test-ca-en-generador  test-ca-en-pretransfer  test-ca-en-tagger  test-en-ca  test-en-ca-chunker  test-en-ca-generador  test-en-ca-interchunk  test-en-ca-pretransfer  test-en-ca-tagger
apertium-en-ca/partofspeech/: apertium_adj.ca.dix  apertium_adj.en-ca.dix  apertium_adj.en.dix  apertium_adv_preadv_cnj.ca.dix  apertium_adv_preadv_cnj.en-ca.dix  apertium_adv_preadv_cnj.en.dix  apertium_det_pr_prn.ca.dix  apertium_det_pr_prn.en-ca.dix  apertium_det_pr_prn.en.dix  apertium_ij.ca.dix  apertium_ij.en-ca.dix  apertium_ij.en.dix  apertium_noms.ca.dix  apertium_noms.en-ca.dix  apertium_noms.en.dix  apertium_np.ca.dix  apertium_np.en-ca.dix  apertium_np.en.dix  apertium_num.ca.dix  apertium_num.en-ca.dix  apertium_num.en.dix  apertium_vb.ca.dix  apertium_vb.en-ca.dix  apertium_vb.en.dix
apertium-en-pl/: .gitignore  ChangeLog  English_to_Polish.txt  Makefile.am  TODO  apertium-en-pl.en-pl.dix.xml  apertium-en-pl.en-pl.t1x  apertium-en-pl.en.dix.xml  apertium-en-pl.pl-en.t1x  apertium-en-pl.pl.dix.xml  apertium-en-pl.pl.pardefs.xml  apertium-en-pl.post-en.dix  apertium-en-pl.post-pl.dix  apertium-en-pl.symbols.xml  configure.ac  enpl-adjectives.xml  enpl-bible.xml  enpl-places.xml  enpl-proverbs.xml  enpl-surnames.xml  literary-characters.txt  pardefs-places.xml  pldix-bible.xml  pldix-names.xml  pldix-othernames.xml  pldix-phrases.xml  pldix-places.xml  pldix-surnames.xml  plen-adjectives.xml
apertium-en-pl/include/: enpl-places.xml  pardefs-places.xml  pldix-names.xml  pldix-places.xml
apertium-en-pl/misc/: freq-sample.xml  freq.sed  imie.extract  nouns.extract
apertium-eo-es/: Makefile.am  apertium-eo-es.es-eo.t1x  apertium-eo-es.es-eo.t2x  configure.ac  modes.xml
apertium-es-pt/: Makefile.am  README  apertium-es-pt.es-pt.dix  apertium-es-pt.es.dix  apertium-es-pt.es.tsx  apertium-es-pt.post-es.dix  apertium-es-pt.post-pt.dix  apertium-es-pt.pt.dix  apertium-es-pt.pt.tsx  apertium-es-pt.trules-es-pt.xml  apertium-es-pt.trules-pt-es.xml  autogen.sh  configure.ac  es-pt-supervised.make  es-pt.prob  filterrules.xsl  modes.xml  pt-es-supervised.make  pt-es.prob
apertium-es-ro/: AUTHORS  Makefile.am  README  apertium-es-ro.es-ro.dix  apertium-es-ro.es.dix  apertium-es-ro.es.tsx  apertium-es-ro.post-es.dix  apertium-es-ro.post-ro.dix  apertium-es-ro.ro.dix  apertium-es-ro.ro.tsx  apertium-es-ro.trules-es-ro.xml  apertium-es-ro.trules-ro-es.xml  autogen.sh  configure.ac  modes.xml  ro-es.prob
apertium-eu-es/: AUTHORS  Makefile.am  README  apertium-eu-es.es.dix  apertium-eu-es.eu-es.dix  apertium-eu-es.eu-es.t1x  apertium-eu-es.eu-es.t2x  apertium-eu-es.eu-es.t3x  apertium-eu-es.eu.dix  apertium-eu-es.eu.tsx  configure.ac  eu-es.prob  modes.xml
apertium-fr-es/: AUTHORS  Makefile.am  apertium-fr-es.es-fr.t1x  apertium-fr-es.es-fr.t2x  apertium-fr-es.es-fr.t3x  apertium-fr-es.es.dix  apertium-fr-es.fr-es.dix  apertium-fr-es.fr-es.t1x  apertium-fr-es.fr-es.t2x  apertium-fr-es.fr-es.t3x  apertium-fr-es.fr.dix  apertium-fr-es.fr.metadix  apertium-fr-es.fr.tsx  apertium-fr-es.post-es.dix  apertium-fr-es.post-fr.dix  configure.ac  fr-es-unsupervised.make  fr-es.prob  modes.xml
apertium-oc-ca/: AUTHORS  Makefile.am  apertium-oc-ca.ca-oc.t1x  apertium-oc-ca.ca-oc.t2x  apertium-oc-ca.ca-oc.t3x  apertium-oc-ca.ca.dix  apertium-oc-ca.oc-ca.dix  apertium-oc-ca.oc-ca.t1x  apertium-oc-ca.oc-ca.t2x  apertium-oc-ca.oc-ca.t3x  apertium-oc-ca.oc.metadix  apertium-oc-ca.oc.tsx  apertium-oc-ca.oc@aran.tsx  apertium-oc-ca.post-ca.dix  apertium-oc-ca.post-oc.dix  autogen.sh  aversion.xsl  ca-oc-supervised.make  configure.ac  modes.xml  oc-ca-unsupervised.make
apertium-oc-es/: AUTHORS  Makefile.am  apertium-oc-es.es-oc.t1x  apertium-oc-es.es-oc.t2x  apertium-oc-es.es-oc.t3x  apertium-oc-es.es.dix  apertium-oc-es.oc-es.dix  apertium-oc-es.oc-es.t1x  apertium-oc-es.oc-es.t2x  apertium-oc-es.oc-es.t3x  apertium-oc-es.oc.metadix  apertium-oc-es.oc.tsx  apertium-oc-es.post-oc.dix  aversion.xsl  configure.ac  modes.xml
apertium-sh-mk/: AUTHORS  Makefile  Makefile.am  Makefile.old  README  TODO  apertium-sh-mk.mk-sh.t1x  apertium-sh-mk.mk-sh.t2x  apertium-sh-mk.mk.dix.xml  apertium-sh-mk.post-sh.dix  apertium-sh-mk.post-sh_HR.dix  apertium-sh-mk.sh-mk.dix.xml  apertium-sh-mk.sh-mk.t1x  apertium-sh-mk.sh.dix.xml  apertium-sh-mk.symbols.xml  configure.ac  modes.xml  sl.paradigms  sr.paradigms
apertium-tg-fa/: AUTHORS  Makefile.am  Makefile.old  README  apertium-tg-en.en.dix.xml  apertium-tg-en.tg-en.t1x  apertium-tg-en.tg.dix.xml  apertium-tg-fa.fa-tg.t1x  apertium-tg-fa.fa.dix  apertium-tg-fa.fa.dix.xml  apertium-tg-fa.post-tg.dix.xml  apertium-tg-fa.symbols.xml  apertium-tg-fa.tg-fa.dix.xml  apertium-tg-fa.tg.dix.xml  apertium-tg-fa.translit-tg@Latn.dix  apertium-tg-fa.translit.dix  configure.ac  modes.xml
(+1475 files in other folders)
